--- a/NP_Config/Dictionary_DarkStyle.xaml
+++ b/NP_Config/Dictionary_DarkStyle.xaml
@@ -1,19 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="Color_1" Color="#FF17191D"/>
-    <SolidColorBrush x:Key="Color_2" Color="#FF212328"/>
-    <SolidColorBrush x:Key="Color_3" Color="#FF2D3238"/>
-    <SolidColorBrush x:Key="Color_4" Color="#FF9A9C9D"/>
 
-    <SolidColorBrush x:Key="Color_5" Color="#FF507348"/>
-    <SolidColorBrush x:Key="Color_6" Color="#FFD4D7D8"/>
+    <Color x:Key="Color_type_1">#202F31</Color>
+    <Color x:Key="Color_type_2">#293A3D</Color>
+    <Color x:Key="Color_type_3">#395156</Color>
+    <Color x:Key="Color_type_4">#B4CCCF</Color>
+    <Color x:Key="Color_type_5">#FF508A43</Color>
+    <Color x:Key="Color_type_6">#F3F6F7</Color>
+    <Color x:Key="Color_type_7">#51777B</Color>
 
-    <Color x:Key="Color_textbox_1">#FF17191D</Color>
-    <Color x:Key="Color_textbox_2">#FF212328</Color>
-    <Color x:Key="Color_textbox_3">#FF2D3238</Color>
-    <Color x:Key="Color_textbox_4">#FF9A9C9D</Color>
-
+    <SolidColorBrush x:Key="Color_1" Color="{DynamicResource Color_type_1}"/>
+    <SolidColorBrush x:Key="Color_2" Color="{DynamicResource Color_type_2}"/>
+    <SolidColorBrush x:Key="Color_3" Color="{DynamicResource Color_type_3}"/>
+    <SolidColorBrush x:Key="Color_4" Color="{DynamicResource Color_type_4}"/>
+    <SolidColorBrush x:Key="Color_5" Color="{DynamicResource Color_type_5}"/>
+    <SolidColorBrush x:Key="Color_6" Color="{DynamicResource Color_type_6}"/>
+    <SolidColorBrush x:Key="Color_7" Color="{DynamicResource Color_type_7}"/>
 
     <!-- BUTTON -->
     <Style x:Key="ButtonStyle_Menu1" TargetType="Button">
@@ -97,18 +100,21 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="ButtonStyle_Type1" TargetType="{x:Type Button}">
+    <Style x:Key="ButtonStyle_Type1" TargetType="{x:Type Button}">  
         <Setter Property="Background" Value="{StaticResource Color_3}" />
         <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="UseLayoutRounding" Value="True"/>
-        <Setter Property="FontSize" Value="13"/>
-            
+        <Setter Property="Height" Value="20"/>
+        <Setter Property="Width" Value="20"/>
+        <Setter Property="FontSize" Value="12"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border Background="{TemplateBinding Background}" CornerRadius="2">
                         <Border.Effect>
-                            <DropShadowEffect BlurRadius="3" ShadowDepth="1" Opacity="0.5"/>
+                            <DropShadowEffect BlurRadius="2" ShadowDepth="1" Opacity="1" Color="{StaticResource Color_type_1}"/>
                         </Border.Effect>
                         <Grid>
                             <ContentPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" ContentSource="{TemplateBinding Content}"/>
@@ -117,15 +123,16 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="FontSize" Value="14"/>
-                <Setter Property="Foreground" Value="{StaticResource Color_6}"/>
+                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="Background" Value="{StaticResource Color_7}"/>
+                <Setter Property="Foreground" Value="{StaticResource Color_2}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="FontSize" Value="14"/>
-                <Setter Property="Foreground" Value="{StaticResource Color_5}"/>
+                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="Background" Value="{StaticResource Color_7}"/>
+                <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -134,15 +141,15 @@
         <Setter Property="Background" Value="{StaticResource Color_3}" />
         <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="UseLayoutRounding" Value="True"/>
         <Setter Property="FontSize" Value="12"/>
-
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border Background="{TemplateBinding Background}" CornerRadius="2">
                         <Border.Effect>
-                            <DropShadowEffect BlurRadius="3" ShadowDepth="1" Opacity="0.5"/>
+                            <DropShadowEffect BlurRadius="2" ShadowDepth="1" Opacity="1" Color="{StaticResource Color_type_1}"/>
                         </Border.Effect>
                         <Grid>
                             <ContentPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" ContentSource="{TemplateBinding Content}"/>
@@ -154,11 +161,11 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontSize" Value="13"/>
                 <Setter Property="Foreground" Value="{StaticResource Color_6}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontSize" Value="13"/>
                 <Setter Property="Foreground" Value="{StaticResource Color_5}"/>
             </Trigger>
         </Style.Triggers>
@@ -332,12 +339,53 @@
                 <ControlTemplate TargetType="{x:Type TextBoxBase}">
                     <Border Name="Border" CornerRadius="2" Padding="1,0,1,0">
                         <Border.Background>
-                            <SolidColorBrush Color="{StaticResource Color_textbox_4}" />
+                            <SolidColorBrush Color="{StaticResource Color_type_4}" />
                         </Border.Background>
                         <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+
+    <Style x:Key="TextBoxStyle_Type2" TargetType="TextBox">
+        <Setter Property="Foreground" Value="#CC000000" />
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TextBox">
+                    <Border Name="Border" CornerRadius="2" Padding="1,0,1,0">
+                        <Border.Background>
+                            <SolidColorBrush Color="{StaticResource Color_type_4}" />
+                        </Border.Background>
+                        <ScrollViewer Margin="0" x:Name="PART_ContentHost" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <!--<Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="TextBox">
+                            <Grid>
+                                <Border>
+                                    <Grid>
+                                        <TextBlock Text="✕" FontSize="23" VerticalAlignment="Center" FontFamily="Arial Black" Style="{DynamicResource TextBlockStyle_Type2}" HorizontalAlignment="Center" >
+                                            <TextBlock.Effect>
+                                                <DropShadowEffect ShadowDepth="1" BlurRadius="3" Color="Black"/>
+                                            </TextBlock.Effect>
+                                        </TextBlock>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>-->
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
