--- a/NP_Config/WorkPage.xaml
+++ b/NP_Config/WorkPage.xaml
@@ -4,12 +4,12 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d" 
-      d:DesignHeight="440" d:DesignWidth="900"
+      d:DesignHeight="440" d:DesignWidth="1050"
       Title="WorkPage">
 
-    <Grid Style="{DynamicResource GridStyle_Type2}">
+    <Grid Style="{DynamicResource GridStyle_Type2}" UseLayoutRounding="True">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="300"></ColumnDefinition>
             <ColumnDefinition Width="250"></ColumnDefinition>
             <ColumnDefinition Width="500"></ColumnDefinition>
         </Grid.ColumnDefinitions>
@@ -20,7 +20,15 @@
                     <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
                 </Border.Effect>
                 <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
 
+                    </Grid>
                 </Grid>
             </Border>
         </Grid>
@@ -32,7 +40,8 @@
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"></RowDefinition>
-                        <RowDefinition Height="60"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="15"></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
 
@@ -45,19 +54,34 @@
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Column="0">
-                            <TextBlock Text="1 канал" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
-                            <TextBox x:Name="NP_Channel1_count" Text="0" PreviewTextInput="Cheking_for_numbers_type2" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,27,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="NP_Channel1_count_TextChanged" />
-                            <Button x:Name="NP_Channel1_Remove" Width="20" Height="20" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type2}" Click="NP_Channel1_Remove_Click" />
-                            <Button x:Name="NP_Channel1_Add" Width="20" Height="20" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="NP_Channel1_Add_Click" />
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="22"></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Text="1 канал" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            <Grid Grid.Row="1">
+                                <TextBox x:Name="NP_Channel1_count" Text="0" PreviewTextInput="Cheking_for_numbers_type2" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="NP_Channel1_count_TextChanged" />
+                                <Button x:Name="NP_Channel1_Remove" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,70,0" Style="{DynamicResource ButtonStyle_Type1}" Click="NP_Channel1_Remove_Click" />
+                                <Button x:Name="NP_Channel1_Add" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,0,0,0" Style="{DynamicResource ButtonStyle_Type1}" Click="NP_Channel1_Add_Click" />
+                            </Grid>
+
                         </Grid>
                         <Grid Grid.Column="1">
-                            <TextBlock Text="2 канал" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
-                            <TextBox x:Name="NP_Channel2_count" Text="0" PreviewTextInput="Cheking_for_numbers_type2" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,27,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="NP_Channel2_count_TextChanged" />
-                            <Button x:Name="NP_Channel2_Remove" Width="20" Height="20" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type2}" Click="NP_Channel2_Remove_Click" />
-                            <Button x:Name="NP_Channel2_Add" Width="20" Height="20" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="NP_Channel2_Add_Click" />
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25"></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0" Text="2 канал" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center"  Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
+                            <Grid Grid.Row="1">
+                                <TextBox x:Name="NP_Channel2_count" Text="0" PreviewTextInput="Cheking_for_numbers_type2" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="NP_Channel2_count_TextChanged" />
+                                <Button x:Name="NP_Channel2_Remove" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,70,0" Style="{DynamicResource ButtonStyle_Type1}" Click="NP_Channel2_Remove_Click" />
+                                <Button x:Name="NP_Channel2_Add" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="70,0,0,0" Style="{DynamicResource ButtonStyle_Type1}" Click="NP_Channel2_Add_Click" />
+                            </Grid>
                         </Grid>
                     </Grid>
-                    <Grid Grid.Row="2">
+                    <Grid Grid.Row="2"/>
+
+                    <Grid Grid.Row="3">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
@@ -74,7 +98,7 @@
         </Grid>
         <Grid Grid.Column="2" Margin="8">
             <Border Style="{DynamicResource BorderStyle_Type1}" UseLayoutRounding="True">
-                <Border.Effect>
+                <Border.Effect >
                     <DropShadowEffect ShadowDepth="3" BlurRadius="20" Opacity="0.7"/>
                 </Border.Effect>
                 <Grid>
@@ -83,7 +107,7 @@
                         <RowDefinition Height="190"></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
-                    
+
                     <!--<Button Width="50" Height="20" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="230,63,0,0" Style="{DynamicResource ButtonStyle_Type1}"/>-->
 
                     <Grid Grid.Row="0">
@@ -92,12 +116,12 @@
                             <ColumnDefinition Width="140"></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        
+
                         <Grid Grid.Column="0">
                             <TextBlock Text="Датчики слева" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                             <TextBox x:Name="UCH_CountZR_Left" Text="0" PreviewTextInput="Cheking_for_numbers_type1" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,27,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="UCH_CountZR_Left_TextChanged"/>
-                            <Button x:Name="UCH_RemoveZR_Left" Width="20" Height="20" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
-                            <Button x:Name="UCH_AddZR_Left" Width="20" Height="20" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_AddZR_Left_Click"/>
+                            <Button x:Name="UCH_RemoveZR_Left" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type1}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button x:Name="UCH_AddZR_Left" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type1}" Click="UCH_AddZR_Left_Click"/>
                         </Grid>
                         <Grid Grid.Column="1">
                             <TextBlock Text="Название участка" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
@@ -106,8 +130,8 @@
                         <Grid Grid.Column="2">
                             <TextBlock Text="Датчики справа" Width="110" Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,5,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
                             <TextBox x:Name="UCH_CountZR_Right" Text="0" PreviewTextInput="Cheking_for_numbers_type1" Width="40" Height="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,27,0,0" Style="{DynamicResource TextBoxStyle_Type1}" TextAlignment="Center" TextChanged="UCH_CountZR_Right_TextChanged"/>
-                            <Button x:Name="UCH_RemoveZR_Right" Width="20" Height="20" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Right_Click"/>
-                            <Button x:Name="UCH_AddZR_Right" Width="20" Height="20" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_AddZR_Right_Click"/>
+                            <Button x:Name="UCH_RemoveZR_Right" Content="&#10134;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,70,0" Style="{DynamicResource ButtonStyle_Type1}" Click="UCH_RemoveZR_Right_Click"/>
+                            <Button x:Name="UCH_AddZR_Right" Content="&#10133;" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,26,0,0" Style="{DynamicResource ButtonStyle_Type1}" Click="UCH_AddZR_Right_Click"/>
                         </Grid>
                     </Grid>
 
@@ -133,6 +157,8 @@
                             </Grid>
                         </Grid>
 
+                        <Grid Grid.Column="1"/>
+
                         <Grid Grid.Column="2">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="20"></RowDefinition>
@@ -149,11 +175,25 @@
                         </Grid>
                     </Grid>
 
+                    <Grid Grid.Row="2">
+                        <TextBlock Text="Добавлено участков: 0"  Height="20" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,2,0,0" Style="{DynamicResource TextBlockStyle_Type3}" TextAlignment="Center"/>
 
-                    <Grid Grid.Row="2"/>
+                        <Grid Margin="20">
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,23,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,46,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,69,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,92,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,115,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
 
 
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="110,0,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="220,0,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
+                            <Button Height="20" Content="103d-ddddee454dd" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="330,0,0,0" Style="{DynamicResource ButtonStyle_Type2}" Click="UCH_RemoveZR_Left_Click"/>
 
+
+                        </Grid>
+                    </Grid>
                 </Grid>
             </Border>
         </Grid>
