--- a/NP_Config/Dictionary_DarkStyle.xaml
+++ b/NP_Config/Dictionary_DarkStyle.xaml
@@ -329,6 +329,11 @@
         <Setter Property="FontSize" Value="12"/>
     </Style>
 
+    <Style x:Key="TextBlockStyle_Type4" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="{StaticResource Color_4}"/>
+        <Setter Property="FontSize" Value="10"/>
+    </Style>
+
     <!-- TEXTBOX -->
     <Style x:Key="TextBoxStyle_Type1" TargetType="TextBox">
         <Setter Property="Foreground" Value="{StaticResource Color_1}" />
